# OpenDLP

./: CMakeLists.txt  README.md
src/scanner/: CMakeLists.txt  main.cpp
src/scanner/config/: rules.json
src/scanner/include/: Scanner.hpp
src/scanner/output/: violations.json
src/scanner/sample_data/: test1.txt
src/scanner/src/: Scanner.cpp
